# src/Api/V1/OpportunityTransformer.php
@@ -27,6 +27,7 @@ final class OpportunityTransformer
             'workflow_status' => $opportunity->workflowStatus,
             'project_care' => $opportunity->projectCare,
             'counterparty' => $opportunity->counterparty,
+            'project_kinds' => $opportunity->projectKinds,
             'rate' => [
                 'min' => $opportunity->rateMin,
                 'max' => $opportunity->rateMax,
@@ -69,6 +70,8 @@ final class OpportunityTransformer
             'project_care_history' => $opportunity->projectCareHistory,
             'counterparty' => $opportunity->counterpartyHistory[0]['value'] ?? null,
             'counterparty_history' => $opportunity->counterpartyHistory,
+            'project_kinds' => $opportunity->projectKindHistory[0]['values'] ?? null,
+            'project_kind_history' => $opportunity->projectKindHistory,
             'project_care' => $opportunity->projectCareHistory[0]['value'] ?? null,
             'discoveries' => $opportunity->discoveries,
             'rate' => [
